# tapioca-teamculture

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
tapioca_teamculture/: __init__.py  resource_mapping.py  tapioca_teamculture.py
tests/: test_tapioca_teamculture.py
