[tool.poetry]
name = "tapioca_teamculture"
version = "0.2.0"
description = "TeamCulture API wrapper using tapioca"
authors = ["Felipe Guilherme Sabino <felipe@sabino.pro>"]

[tool.poetry.dependencies]
python = "^3.7"
tapioca-wrapper = "^2.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
